Sat Oct  7 08:03:43 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: Change kdc.conf ports definitions to current
		methodology. 

Thu Sep 28 18:54:43 1995  Mark Eichin  <eichin@cygnus.com>

	* default.exp: set timeout to 100 since the default of 10 is
	ludicrous with NFS.

Wed Sep 13 14:02:03 1995  Theodore Y. Ts'o  <tytso@dcl>

	* default.exp: Save the key used to generate the database files.
		Also generate a set of environment setup scripts.
		These are the convenience of someone who wishes to run some
		of the tests by hand, when tests are bombing.

Sun Sep 10 10:09:41 1995  Ezra Peisach  (epeisach@dcl)

	* default.exp: Add des-cbc-crc to supported_enctypes as krb5_edit
		requires it for random keys.

Sat Sep  9 16:28:48 1995  Ezra Peisach  (epeisach@dcl)

	* default.exp: supported_keytypes -> supported_enctypes

Sat Aug 26 17:57:47 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* default.exp - Determine location of t_inetd.


Thu Aug 3 11:56:43 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Generate kdc.conf with new symbolic values.


Mon Jul 17 15:25:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Add handling of kdc.conf which has the KDC profile.
		Remove parameters from command lines of admin utilities because
		they're not needed anymore since we have the KDC profile.  Also
		remove prompting for the master key since we have usage of the
		stash file.


Wed Jul 12 14:10:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Correctly set LD_LIBRARY_PATH.  Also set it before
		using RESOLVE.

Thu Jun 22 12:02:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Change argument ordering for KDC.  Realm must come last.


Mon Jun 19 13:38:27 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Fix setup_root_shell() with LD_LIBRARY_PATH.

Thu Jun 15 18:13:55 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Setup and use LD_LIBRARY_PATH, in case we were built
		with shared libraries.
